--- a/ch10/CMakeLists.txt
+++ b/ch10/CMakeLists.txt
@@ -1,10 +1,13 @@
 cmake_minimum_required(VERSION 2.8)
 project(pose_graph)
-
+set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_BUILD_TYPE "Release")
 set(CMAKE_CXX_FLAGS "-std=c++11 -O2")
 
 list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake_modules)
+
+# FMT
+find_package(FMT REQUIRED)
 
 # Eigen
 include_directories("/usr/include/eigen3")
@@ -19,12 +22,12 @@ include_directories(${G2O_INCLUDE_DIRS})
 
 add_executable(pose_graph_g2o_SE3 pose_graph_g2o_SE3.cpp)
 target_link_libraries(pose_graph_g2o_SE3
-        g2o_core g2o_stuff g2o_types_slam3d ${CHOLMOD_LIBRARIES}
+        g2o_core g2o_stuff g2o_types_slam3d fmt::fmt ${CHOLMOD_LIBRARIES}
         )
 
 add_executable(pose_graph_g2o_lie pose_graph_g2o_lie_algebra.cpp)
 target_link_libraries(pose_graph_g2o_lie
-        g2o_core g2o_stuff
+        g2o_core g2o_stuff fmt::fmt
         ${CHOLMOD_LIBRARIES}
         ${Sophus_LIBRARIES}
         )
